--- a/style.css
+++ b/style.css
@@ -1,6 +1,66 @@
-h1 {
-	color: blue;
+/* main */
+:root {
+	--white: #ffffff;
+	--blue: #1e90ff;
 }
-p {
-	color: red;
+
+body {
+	background-color: var(--white);
+	font-family: 'Inter' , sans-serif;
 }
+
+/* mobile */
+@media screen and (max-width:  480px) {
+	body {
+		background-color: var(--blue);
+	}
+	/* container */
+	.container {
+		display: flex;
+		flex-direction: column;
+		align-content: center;
+		border: 5px solid red;
+		height: 100vh;
+	}
+
+	/* logo */
+	.logo {
+		font-weight: 600;
+		size: 20px;
+		line-height: 28px;
+		text-align: center;
+
+		width: 200px;
+		height: 50px;
+
+		padding-top: 10px;
+		padding-left: 12px;
+		border: 5px solid red;
+	}
+
+	/* intro-section */
+	.primary {
+		font-weight: 700px;
+		font-size: 40px;
+		font-style: normal;
+
+		line-height: 52px;
+		text-align: center;
+
+		width: 100%;
+		height: 100%;
+		
+		padding-left: 3px;
+
+		border: 5px solid red;
+	}
+
+}
+
+
+
+
+
+
+
+
