--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 	/* logo */
 	.logo {
 		font-weight: 600;
-		size: 20px;
+		font-size: 20px;
 		line-height: 28px;
 		text-align: center;
 
