--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
-/* main */
+/* global reset*/
+* {
+	box-sizing: border-box;
+}
+
+/* color variables */
 :root {
 	--white: #ffffff;
 	--blue: #1e90ff;
 	--cayn-blue: #172B4D;
 	--green: #068f2f;
 	--green-cayn: #28352F;
+	--Tealish-blue: #505F79;
 }
 
 body {
@@ -22,25 +28,44 @@ body {
 		flex-direction: column;
 		align-content: center;
 		align-items:  center;
-		border: 5px solid red;
 		height: 100vh;
 	}
 
-	/* logo */
+	/* nav-bar*/
+	.nav-bar {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 480px;
+	}
 
 	.welcome {
 		font-weight: 600;
 		font-size: 30px;
 		line-height: 28px;
 
-		width: 200px;
+		width: 150px;
 		height: 50px;
 
-		padding-right: 220px;
+		/*padding-right: 220px;*/
 		padding-top: 40px;
+		padding-left: 30px;
 		
-		margin-bottom: 0;
 		color: var(--green-cayn);
+	}
+
+	/* Hamburger lines */
+	.hamburger {
+		padding-top: 60px;
+		height: 100px;
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
+	}
+	.ham-line {
+		height: 2px;
+		width: 50px;
+		background: black;
 	}
 
 	/* intro-section */
@@ -53,7 +78,6 @@ body {
 		font-style: normal;
 
 		width: 100%;
-		
 		line-height: 130%; 
 	}
 
@@ -80,6 +104,19 @@ body {
 	.social {
 		display: flex;
 		gap: 15px;
+		padding-top: 10px;
+	}
+
+	/* scroll button */
+	#scroll-img {
+		width: 40px;
+		height: 40px;
+		left: calc(50% - 40px/2 + 0.5px);
+		bottom: 4px;
+		position: absolute;
+
+		border: 1px solid #DFE1E6;
+		border-radius: 32px;
 	}
 }
 
