--- a/style.css
+++ b/style.css
@@ -1,129 +1,117 @@
-/* global reset*/
+/* global reset */
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* color variables */
 :root {
-	--white: #ffffff;
-	--blue: #1e90ff;
-	--cayn-blue: #172B4D;
-	--green: #068f2f;
-	--green-cayn: #28352F;
-	--Tealish-blue: #505F79;
+  --white: #fff;
+  --blue: #1e90ff;
+  --cayn-blue: #172b4d;
+  --green: #068f2f;
+  --green-cayn: #28352f;
+  --Tealish-blue: #505f79;
 }
 
 body {
-	background-color: var(--white);
-	font-family: 'Inter' , sans-serif;
+  background-color: var(--white);
+  font-family: 'Inter', sans-serif;
 }
 
 /* mobile */
-@media screen and (max-width:  480px) {
-	body {
-	}
-	/* container */
-	.container {
-		display: flex;
-		flex-direction: column;
-		align-content: center;
-		align-items:  center;
-		height: 100vh;
-	}
+@media screen and (max-width: 480px) {
+  /* container */
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 
-	/* nav-bar*/
-	.nav-bar {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		width: 480px;
-	}
+  /* nav-bar */
+  .nav-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 480px;
+  }
 
-	.welcome {
-		font-weight: 600;
-		font-size: 30px;
-		line-height: 28px;
+  .welcome {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 28px;
+    width: 150px;
+    height: 50px;
 
-		width: 150px;
-		height: 50px;
+    /* padding-right: 220px; */
+    padding-top: 40px;
+    padding-left: 30px;
+    color: var(--green-cayn);
+  }
 
-		/*padding-right: 220px;*/
-		padding-top: 40px;
-		padding-left: 30px;
-		
-		color: var(--green-cayn);
-	}
+  /* Hamburger lines */
+  .hamburger {
+    padding-top: 60px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 
-	/* Hamburger lines */
-	.hamburger {
-		padding-top: 60px;
-		height: 100px;
-		display: flex;
-		flex-direction: column;
-		gap: 10px;
-	}
-	.ham-line {
-		height: 2px;
-		width: 50px;
-		background: black;
-	}
+  .ham-line {
+    height: 2px;
+    width: 50px;
+    background: black;
+  }
 
-	/* intro-section */
-	.intro {
-		width: 80%;
-	}
-	.primary-text {
-		font-weight: 900px;
-		font-size: 50px;
-		font-style: normal;
+  /* intro-section */
+  .intro {
+    width: 80%;
+  }
 
-		width: 100%;
-		line-height: 130%; 
-	}
+  .primary-text {
+    font-weight: 900px;
+    font-size: 50px;
+    font-style: normal;
+    width: 100%;
+    line-height: 130%;
+  }
 
-	#primary {
-		color: var(--cayn-blue);
-	}
-	/* span */
-	#career {
-		color: var(--green);
-	}
+  #primary {
+    color: var(--cayn-blue);
+  }
 
-	/* support text */
-	#support-text {
-		font-style: normal;
-		font-weight: 400;
-		font-size: 20px;
-		line-height: 28px;
-		padding: 0 40px;
+  /* span */
+  #career {
+    color: var(--green);
+  }
 
-		color: var(--cayn-blue);
-	}
-	
-	/* social media */
-	.social {
-		display: flex;
-		gap: 15px;
-		padding-top: 10px;
-	}
+  /* support text */
+  #support-text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    padding: 0 40px;
+    color: var(--cayn-blue);
+  }
 
-	/* scroll button */
-	#scroll-img {
-		width: 40px;
-		height: 40px;
-		left: calc(50% - 40px/2 + 0.5px);
-		bottom: 4px;
-		position: absolute;
+  /* social media */
+  .social {
+    display: flex;
+    gap: 15px;
+    padding-top: 10px;
+  }
 
-		border: 1px solid #DFE1E6;
-		border-radius: 32px;
-	}
+  /* scroll button */
+  #scroll-img {
+    width: 40px;
+    height: 40px;
+    left: calc(50% - 40px/2 + 0.5px);
+    bottom: 4px;
+    position: absolute;
+    border: 1px solid #dfe1e6;
+    border-radius: 32px;
+  }
 }
-
-
-
-
-
-
-
-
