--- a/style.css
+++ b/style.css
@@ -18,7 +18,11 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-/* mobile */
+/*==========================================================
+ * mobile 
+ * =========================================================
+ */
+
 @media screen and (max-width: 480px) {
   /* container */
   .container {
