--- a/style.css
+++ b/style.css
@@ -18,10 +18,7 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-/*==========================================================
- * mobile 
- * =========================================================
- */
+/* Mobile */
 @media screen and (max-width: 480px) {
   /* container */
   .container {
