--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
+.container {
+	background-image:  url(images/pol1.svg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 100% 100%;
+}
+
 /* Mobile */
 @media screen and (max-width: 480px) {
   /* container */
@@ -27,6 +34,7 @@ body {
     align-content: center;
     align-items: center;
     height: 100vh;
+    width: 480px;
     z-index: 1;
   }
 
