--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   background-image: url(images/pol1.svg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 100% 100%;
+  background-size: 100% 90%;
 }
 
 /* Mobile */
@@ -31,67 +31,67 @@ body {
   .container {
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: center;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
     height: 667px;
     width: 375px;
-    z-index: 1;
   }
 
   /* nav-bar */
   .nav-bar {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    width: 480px;
+    width: 375px;
+    padding-top: 20px;
+    padding-left: 12px;
   }
 
   .welcome {
     font-weight: 600;
-    font-size: 30px;
+    font-size: 20px;
+    font-style: normal;
     line-height: 28px;
-    width: 150px;
-    height: 50px;
-    padding-top: 40px;
-    padding-left: 30px;
+    width: 90px;
+    height: 28px;
     color: var(--green-cayn);
   }
 
   /* Hamburger lines */
   .hamburger {
-    padding-top: 60px;
-    height: 100px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    justify-content: center;
+    gap: 4px;
+    padding-top: 3px;
+    padding-right: 40px;
   }
 
   .ham-line {
     height: 2px;
-    width: 50px;
+    width: 16px;
     background: black;
   }
 
-  /* background polygon */
-  #pol1 {
-    padding-left: 0;
-    border: 2px solid red;
-  }
-
   /* intro-section */
+
   .intro {
-    width: 80%;
+    width: 100%;
+    height: 250px;
+    line-height: 130%;
+    text-align: center;
+    padding-top: 50px;
   }
 
   .primary-text {
-    font-weight: 900px;
-    font-size: 50px;
-    font-style: normal;
     width: 100%;
-    line-height: 130%;
+    font-style: normal;
+    font-size: 40px;
+    line-height: 52px;
+    font-weight: 700;
+    margin: 0;
+    padding-bottom: 0;
   }
 
   #primary {
@@ -109,15 +109,30 @@ body {
     font-weight: 400;
     font-size: 20px;
     line-height: 28px;
-    padding: 0 40px;
+    text-align: center;
+    height: 164px;
+    padding: 5px 20px 0;
     color: var(--cayn-blue);
   }
 
   /* social media */
+
   .social {
     display: flex;
-    gap: 15px;
-    padding-top: 10px;
+    padding-bottom: 40px;
+  }
+
+  #social-icons {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    padding-left: 0;
+  }
+
+  .fa {
+    width: 20px;
+    height: 30px;
   }
 
   /* scroll button */
