--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
 
   /* intro-section */
   .hero {
-    background-image: url(images/header-illsutration-mobile.svg);
+    background-image: url(../images/header-illsutration-mobile.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-size: 110% 100%;
@@ -118,9 +118,12 @@ body {
 
   .social {
     display: flex;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     justify-content: center;
     flex-direction: row;
+    margin-bottom: 2px;
+    height: 100%;
+    width: 100%;
   }
 
   #social-icons {
@@ -129,7 +132,6 @@ body {
     justify-content: space-between;
     gap: 30px;
     padding: 0;
-    margin-bottom: 40px;
     height: 20px;
     width: 170.17px;
   }
