Add the projects style

--- a/css/about-me.css
+++ b/css/about-me.css
@@ -6,11 +6,11 @@
   .about-me {
     height: 3283px;
     width: 379px;
-    display: flex;
+    display: grid;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
+    align-content: stretch;
+    justify-content: center;
+    gap: 16px;
   }
 
   .about-me-title {
@@ -38,11 +38,13 @@
     border-radius: 8px;
     text-align: center;
     border: 1px solid #d0d9d4;
+    margin-bottom: 15px;
   }
 
-  .abt-me-img img {
+  .abt-me-img>img {
     width: 100%;
     height: 252px;
+    border-radius: 8px 8px 0 0;
   }
 
   .text {
@@ -51,20 +53,45 @@
     justify-content: space-between;
     gap: 10px;
     align-items: center;
+    height: 100px;
   }
 
   .framework {
     display: grid;
-    grid-template-columns: 35% 15% 30% 15%;
+    grid-template-columns: 37% 15% 30% 13%;
     grid-template-rows: 1fr;
-    grid-column-gap: 2px;
+    grid-column-gap: 4px;
     border-radius: 4px;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 4px;
+    height: 69px;
   }
 
-  .see-prj {
+  button {
+	  background-color: #EBF0EE;
+	  border: none;
+	  text-align: center;
+          text-decoration: none;
+	  color: #3A4A42;
+	  border-radius: 4px;
+  }
+
+
+  .see-prj > button {
     width: 122px;
     padding: 12px;
     background-color: #36b37f;
     border-radius: 4px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    color: #FFFFFF;
+    line-height: 24px;
+    font-size: 17px;
+    font-weight: 500px;
+  }
+
+  .text {
   }
 }
