--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
   .container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     height: 667px;
     width: 375px;
@@ -37,8 +37,9 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 375px;
-    padding-top: 20px;
-    padding-left: 12px;
+    height: 48px;
+    padding-top: 44px;
+    padding-bottom: 20px;
   }
 
   .welcome {
@@ -48,25 +49,16 @@ body {
     line-height: 28px;
     width: 90px;
     height: 28px;
+    padding-left: 12px; 
     color: var(--green-cayn);
   }
 
-  /* Hamburger lines */
-  .hamburger {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 4px;
-    padding-top: 3px;
-    padding-right: 40px;
+  .ham-menu {
+	  display: flex;
+	  align-items: flex-start;
+	  padding: 8px;
+	  padding-right: 24px;
   }
-
-  .ham-line {
-    height: 2px;
-    width: 16px;
-    background: black;
-  }
-
   /* intro-section */
   .hero {
     background-image: url(../images/header-illsutration-mobile.svg);
@@ -76,11 +68,12 @@ body {
   }
 
   .intro {
-    width: 100%;
-    height: 250px;
+    width: 327px;
+    height: 192px;
     line-height: 130%;
     text-align: center;
-    padding-top: 50px;
+    padding-left: 24px;
+    margin-top: 64px;
   }
 
   .primary-text {
@@ -110,20 +103,18 @@ body {
     line-height: 28px;
     text-align: center;
     height: 164px;
-    padding: 5px 20px 0;
+    width: 327px;
+    padding-left: 24px;
     color: var(--cayn-blue);
+    margin-top: 40px;
   }
 
   /* social media */
 
   .social {
-    display: flex;
-    padding-bottom: 20px;
-    justify-content: center;
-    flex-direction: row;
-    margin-bottom: 2px;
-    height: 100%;
-    width: 100%;
+    width: 170px;
+    padding-left: 52px;
+    margin-top: 50px;
   }
 
   #social-icons {
