--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,4 +1,3 @@
-
 /* Mobile */
 @media screen and (max-width: 480px) {
   /* scroll button */
@@ -7,10 +6,9 @@
     height: 3283px;
     width: 379px;
     display: grid;
-    flex-direction: column;
-    align-content: stretch;
-    justify-content: center;
-    gap: 16px;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    margin-top: 30px;
   }
 
   .about-me-title {
@@ -25,7 +23,7 @@
   .about-me-text {
     font-size: 40px;
     font-style: normal;
-    font-weight: 700px;
+    font-weight: 700;
     line-height: 52px;
     color: #172b4d;
   }
@@ -38,10 +36,10 @@
     border-radius: 8px;
     text-align: center;
     border: 1px solid #d0d9d4;
-    margin-bottom: 15px;
+    margin-top: 50px;
   }
 
-  .abt-me-img > img {
+  .abt-me-img>img {
     width: 100%;
     height: 252px;
     border-radius: 8px 8px 0 0;
@@ -57,15 +55,13 @@
   }
 
   .framework {
-    display: grid;
-    grid-template-columns: 37% 15% 30% 13%;
-    grid-template-rows: 1fr;
-    grid-column-gap: 4px;
-    border-radius: 4px;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 4px;
-    height: 69px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .languages {
+    display: flex;
+    gap: 10px;
+    margin-top: 5px;
   }
 
   button {
@@ -75,9 +71,10 @@
     text-decoration: none;
     color: #3a4a42;
     border-radius: 4px;
+    padding: 8px;
   }
 
-  .see-prj > button {
+  .see-prj>button {
     width: 122px;
     padding: 12px;
     background-color: #36b37f;
@@ -89,5 +86,8 @@
     line-height: 24px;
     font-size: 17px;
     font-weight: 500px;
+  }
+  .languages li {
+    list-style: none;
   }
 }
