--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,93 +1,92 @@
+
 /* Mobile */
 @media screen and (max-width: 480px) {
-  /* scroll button */
+	.description {
+		height: 1626px;
+		width: 375px;
+		display: grid;
+		justify-items: center;
+		margin-top: 50px;
+	}
+	.me {
+		display: grid;
+		height: 333px;
+		width: 351px;
+		align-items: center;
+		text-align: center;
+		margin-top: 50px;
+	}
 
-  .about-me {
-    height: 3283px;
-    width: 379px;
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
-    margin-top: 30px;
-  }
+	.me-title {
+		font-weight: 700;
+		font-size: 30px;
+		line-height: 52px;
+		color: #172B4D;
+		height: 48px;
+		width: 351px;
+	}
 
-  .about-me-title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    height: 97px;
-    width: 327px;
-  }
+	h1 {
+		margin: 0;
+	}
+	
+	#me-des {
+		display: flex;
+		align-items: center;
+		font-weight: 300;
+		font-style: normal;
+		font-size: 19px;
+		color: #42526E;
+		line-height: 32px;
+		height: 189px;
+		width: 351px;
 
-  .about-me-text {
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 52px;
-    color: #172b4d;
-  }
+	}
 
-  .card {
-    display: flex;
-    flex-direction: column;
-    height: 474px;
-    width: 327px;
-    border-radius: 8px;
-    text-align: center;
-    border: 1px solid #d0d9d4;
-    margin-top: 50px;
-  }
 
-  .abt-me-img>img {
-    width: 100%;
-    height: 252px;
-    border-radius: 8px 8px 0 0;
-  }
 
-  .text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 10px;
-    align-items: center;
-    height: 100px;
-  }
+	.btn-resume {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 12px;
+		text-align: center;
+	}
 
-  .framework {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .languages {
-    display: flex;
-    gap: 10px;
-    margin-top: 5px;
-  }
+	.btn-resume a button {
+		display: flex;
+		align-items: center;
+		text-align: center;
+		letter-spacing: 0.03em;
+		background-color: #36B37F;
+		color: #FFFFFF;
+		height: 48px;
+		width: 159px;
+		border-radius: 4px;
+		font-weight: 500;
+		font-size: 17px;
+		line-height: 24px;
+		padding-left: 15px;
+	}
+	.btn-resume a {
+		text-decoration: none;
+	}
 
-  button {
-    background-color: #ebf0ee;
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    color: #3a4a42;
-    border-radius: 4px;
-    padding: 8px;
-  }
+	.background-1 {
+		display: flex;
+		justify-content: flex-end;
+		float: right;
+		position: absolute;
+		width: 100%;
+	}
 
-  .see-prj>button {
-    width: 122px;
-    padding: 12px;
-    background-color: #36b37f;
-    border-radius: 4px;
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    color: #fff;
-    line-height: 24px;
-    font-size: 17px;
-    font-weight: 500px;
-  }
-  .languages li {
-    list-style: none;
-  }
-}
+	.background-2 {
+		position: absolute;
+		float: left;
+		width: 100%;
+		margin-top: 300px;
+	}
+	.about-me-cards {
+
+	}
+t}
