Fix style errors

--- a/css/about-me.css
+++ b/css/about-me.css
@@ -72,12 +72,6 @@
     padding-left: 15px;
   }
 
-  .resume-btn button:hover {
-	  background-color: #1E488F;
-	  box-shadow: 0px 8px 16px rgba(30, 72, 143, 0.24);
-	  border-radius: 4px;
-  }
-
   .btn-resume a {
     text-decoration: none;
   }
@@ -141,6 +135,12 @@
   .abt-languages a button {
     background-color: #fff;
     color: #36b37e;
+  }
+
+  .resume-btn a button:hover {
+    background-color: #1e488f;
+    box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
+    border-radius: 4px;
   }
 
   ul {
