--- a/css/recent-works.css
+++ b/css/recent-works.css
@@ -75,7 +75,6 @@
     padding: 8px;
   }
 
-
   .see-prj > button {
     width: 122px;
     padding: 12px;
@@ -89,11 +88,11 @@
     font-size: 17px;
     font-weight: 500px;
   }
-  
+
   button:hover {
-	  background-color: #1E488F;
-	  box-shadow: 0px 8px 16px rgba(30, 72, 143, 0.24);
-	  border-radius: 4px;
+    background-color: #1e488f;
+    box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
+    border-radius: 4px;
   }
 
   .languages li {
