--- a/css/recent-works.css
+++ b/css/recent-works.css
@@ -90,7 +90,7 @@
   }
 
   button:hover {
-    background-color: #1e488f;
+    background-color: #008552;
     box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
     border-radius: 4px;
   }
