--- a/css/about-me.css
+++ b/css/about-me.css
@@ -138,7 +138,7 @@
   }
 
   .resume-btn a button:hover {
-    background-color: #1e488f;
+    background-color: #008552;
     box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
     border-radius: 4px;
   }
