--- a/css/about-me.css
+++ b/css/about-me.css
@@ -3,7 +3,7 @@
 @media screen and (max-width: 480px) {
   .about-me-sec {
     width: 375px;
-    height: 1725px;
+    height: auto;
   }
 
   .description {
