--- a/css/forms.css
+++ b/css/forms.css
@@ -16,6 +16,7 @@
   line-height: 52px;
   text-align: center;
   color: #172B4D;
+  margin-bottom: 58px;
   }
 
   form {
@@ -23,6 +24,7 @@
     flex-direction: column;
     width: 100%;
     gap: 24px;
+    margin-top: 24px;
   }
 
   .form-input {
@@ -31,14 +33,40 @@
     border: 1px solid #D0D9D4;
     border-radius: 4px;
     padding: 16px 15px;
+    border-radius: 4px;
   }
 
-  ::placeholder {
+  input::placeholder {
     font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
   color: #6B778C;
+  }
+
+  textarea::placeholder{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    color: #091E42;
+  }
+
+  form button {
+  padding: 12px;
+  gap: 10px;
+  width: 129px;
+  height: 48px;
+  background: #36B37F;
+  border-radius: 4px;
+  color: #FFFFFF;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  margin: 0 auto;
   }
 }
