--- a/css/recent-works.css
+++ b/css/recent-works.css
@@ -87,7 +87,7 @@
     color: #fff;
     line-height: 24px;
     font-size: 17px;
-    font-weight: 500px;
+    font-weight: 500;
   }
 
   button:hover {
