--- a/css/recent-works.css
+++ b/css/recent-works.css
@@ -1,3 +1,71 @@
+
+  .abt-me-img > img {
+    width: 100%;
+    height: 252px;
+    border-radius: 8px 8px 0 0;
+  }
+  .card {
+    display: flex;
+    flex-direction: column;
+    height: 474px;
+    width: 327px;
+    border-radius: 8px;
+    text-align: center;
+    border: 1px solid #d0d9d4;
+    margin-top: 50px;
+  }
+  
+  .prj {
+	  display: flex;
+	  flex-direction: row;
+	  flex-wrap: wrap;
+	  justify-content: space-evenly;
+  }
+
+  .framework {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .languages {
+    display: flex;
+    gap: 10px;
+    margin-top: 5px;
+  }
+
+  button {
+    background-color: #ebf0ee;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    color: #3a4a42;
+    border-radius: 4px;
+    padding: 8px;
+  }
+
+  .see-prj > button {
+    width: 122px;
+    padding: 12px;
+    background-color: #36b37f;
+    border-radius: 4px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    line-height: 24px;
+    font-size: 17px;
+    font-weight: 500;
+  }
+
+  button:hover {
+    background-color: #008552;
+    box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
+    border-radius: 4px;
+  }
+
+  .languages li {
+    list-style: none;
+  }
 /* Mobile */
 @media screen and (max-width: 480px) {
   /* scroll button */
