--- a/css/recent-works.css
+++ b/css/recent-works.css
@@ -1,4 +1,4 @@
-
+@media screen and (min-width: 480px) {
   .abt-me-img > img {
     width: 100%;
     height: 252px;
@@ -66,6 +66,29 @@
   .languages li {
     list-style: none;
   }
+
+  .about-me-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 97px;
+    width: auto;
+  }
+
+  .about-me-text {
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 52px;
+    color: #172b4d;
+  }
+
+  .about-me-img {
+    display: none;
+  }
+
+}
 /* Mobile */
 @media screen and (max-width: 480px) {
   /* scroll button */
