--- a/css/style.css
+++ b/css/style.css
@@ -16,20 +16,19 @@
 }
 
 @media screen and (min-width: 480px) {
-
   body {
-    background-color: #E5E5E5;
+    background-color: #e5e5e5;
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
   }
 
   .welcome {
-    display: None;
+    display: none;
   }
 
   .ham-menu {
-    display: None;
+    display: none;
   }
 
   .menu {
@@ -54,12 +53,12 @@
     line-height: 20px;
     padding: 0 14px;
     text-decoration: none;
-    color: #172B4D;
+    color: #172b4d;
   }
 
   .menu li a:hover {
-    color: #0099CC;
-    background: #F2F2F2;
+    color: #09c;
+    background: #f2f2f2;
   }
 
   .container {
@@ -77,7 +76,7 @@
   .intro {
     width: auto;
     height: auto;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 48px;
@@ -143,8 +142,6 @@
     border: 1px solid #dfe1e6;
     border-radius: 32px;
   }
-
-
 }
 
 /* Mobile */
@@ -157,7 +154,7 @@
   }
 
   .menu {
-    display: None;
+    display: none;
   }
 
   /* container */
