--- a/css/style.css
+++ b/css/style.css
@@ -64,13 +64,22 @@
   .container {
     background-image: url(/images/Header-llustration-desktop.svg);
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    height: 100vh;
+    background-size: cover;
+    height: 1290px;
   }
 
   .hero {
-    margin: 100px;
-    padding-left: ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 160px 0px;
+    gap: 24px;
+
+    position: absolute;
+    width: 920px;
+    height: 756px;
+    margin-left: 460px;
+    margin-top: 72px;
   }
 
   .intro {
@@ -85,16 +94,17 @@
     letter-spacing: 0.37px;
   }
 
+
   .support-text {
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
-    line-height: 28px;
+    line-height: 32px;
     text-align: center;
-    height: auto;
-    padding-left: 24px;
-    color: var(--cayn-blue);
-    margin-top: 40px;
+    width: 920px;
+    height: 96px;
+
+    color: #172B4D;
   }
 
   .career {
