--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 160px 0px;
+    padding: 180px 0px;
     gap: 24px;
 
     position: absolute;
-    width: 920px;
-    height: 756px;
-    margin-left: 460px;
+    width: auto;
+    height: auto;
+    margin-left: 400px;
     margin-top: 72px;
   }
 
@@ -102,7 +102,7 @@
     line-height: 32px;
     text-align: center;
     width: 920px;
-    height: 96px;
+    height: auto;
 
     color: #172B4D;
   }
@@ -129,8 +129,8 @@
   }
 
   .fa {
-    width: 16px;
-    height: 16px;
+    width: 20px;
+    height: 20px;
   }
 
   .medium {
@@ -277,6 +277,7 @@
     width: 170.17px;
   }
 
+  
   .fa {
     width: 16px;
     height: 16px;
