--- a/css/recent-works.css
+++ b/css/recent-works.css
@@ -1,31 +1,70 @@
 @media screen and (min-width: 480px) {
-  .abt-me-img > img {
+  .rcnt-work-indicator>img {
+    display: none;
+  }
+
+  .recent-works {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 80px 0px;
+    gap: 48px;
+
+    width: auto;
+    height: auto;
+  }
+
+  .recent-works-title {
+    width: auto;
+    height: auto;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    color: #172B4D;
+  }
+
+  .card-img>img {
     width: 100%;
     height: 252px;
     border-radius: 8px 8px 0 0;
   }
 
+  .prj {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+    padding: 0 135px 0 135px;
+  }
+
   .card {
+    padding: 0;
+    background-color: #fff;
+    border: 1px solid #D0D9D4;
+    border-radius: 8px;
+  }
+
+  .card-title h1 {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
+    color: #172B4D;
+  }
+  .text {
     display: flex;
     flex-direction: column;
-    height: 474px;
-    width: 327px;
-    border-radius: 8px;
-    text-align: center;
-    border: 1px solid #d0d9d4;
-    margin-top: 50px;
-  }
-
-  .prj {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-
-  .framework {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    justify-content: space-between;
+    gap: 10px;
+    align-items: center;
+    height: auto;
+    margin-bottom: 8px;
   }
 
   .languages {
@@ -35,16 +74,16 @@
   }
 
   button {
-    background-color: #ebf0ee;
+    color: #172B4D;
+    background-color: #EBF0EE;
     border: none;
     text-align: center;
     text-decoration: none;
-    color: #3a4a42;
     border-radius: 4px;
     padding: 8px;
   }
 
-  .see-prj > button {
+  .see-prj>button {
     width: 122px;
     padding: 12px;
     background-color: #36b37f;
@@ -56,45 +95,27 @@
     line-height: 24px;
     font-size: 17px;
     font-weight: 500;
+    margin-bottom: 8px;
   }
 
   button:hover {
     background-color: #008552;
     box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
     border-radius: 4px;
+    color: #fff;
   }
 
   .languages li {
     list-style: none;
   }
 
-  .about-me-title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    height: 97px;
-    width: auto;
-  }
-
-  .about-me-text {
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 52px;
-    color: #172b4d;
-  }
-
-  .about-me-img {
-    display: none;
-  }
 }
 
 /* Mobile */
 @media screen and (max-width: 480px) {
   /* scroll button */
 
-  .about-me {
+  .recent-works {
     height: 3283px;
     width: 379px;
     display: grid;
@@ -103,7 +124,7 @@
     margin-top: 30px;
   }
 
-  .about-me-title {
+  .recent-works-title {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -112,7 +133,16 @@
     width: 327px;
   }
 
-  .about-me-text {
+  .recent-works-heading {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    height: 97px;
+    width: 327px;
+  }
+
+  .recent-works-title {
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
@@ -132,7 +162,7 @@
     margin-top: 50px;
   }
 
-  .abt-me-img > img {
+  .card-img>img {
     width: 100%;
     height: 252px;
     border-radius: 8px 8px 0 0;
@@ -168,7 +198,7 @@
     padding: 8px;
   }
 
-  .see-prj > button {
+  .see-prj>button {
     width: 122px;
     padding: 12px;
     background-color: #36b37f;
