--- a/css/recent-works.css
+++ b/css/recent-works.css
@@ -98,7 +98,7 @@
     margin-bottom: 8px;
   }
 
-  button:hover {
+  .see-prj button:hover {
     background-color: #008552;
     box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
     border-radius: 4px;
