--- a/css/forms.css
+++ b/css/forms.css
@@ -1,3 +1,103 @@
+@media screen and (min-width: 480px) {
+
+  .form-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 80px 0px;
+    gap: 24px;
+
+    width: auto;
+    height: auto;
+  }
+
+  .frm-txt {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 52px;
+    padding-left: 135px;
+    text-align: center;
+
+    color: #172B4D;
+  }
+
+  .form-inputs {
+    display:flex;
+    flex-direction: column;
+    gap: 24px;
+    width: 1500px;
+  }
+
+  .name,
+  .email {
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 48px;
+
+    background: #E5E5E5;
+
+    border: 1px solid #D0D9D4;
+    border-radius: 4px
+  }
+
+  input::placeholder {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    color: #6b778c;
+    padding-left: 16px;
+  }
+
+  .message {
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    height: 114px;
+    background: #E5E5E5;
+
+    border: 1px solid #60C095;
+    border-radius: 4px;
+  }
+
+  textarea::placeholder {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    color: #091e42;
+    padding: 10px 0 0 10px;
+  }
+
+  form button {
+    width: 129px;
+    height: 48px;
+    background: #36b37f;
+    border-radius: 4px;
+    color: #fff;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 24px;
+  }
+
+  form button:hover {
+    background: #008552;
+    border-radius: 4px;
+  }
+
+
+  .email-contact {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .form-section {
     display: flex;
