--- a/css/forms.css
+++ b/css/forms.css
@@ -1,30 +1,27 @@
 @media screen and (min-width: 480px) {
-
   .form-section {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 80px 0px;
+    padding: 80px 0;
     gap: 24px;
-
     width: auto;
     height: auto;
   }
 
   .frm-txt {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
     line-height: 52px;
     padding-left: 135px;
     text-align: center;
-
-    color: #172B4D;
+    color: #172b4d;
   }
 
   .form-inputs {
-    display:flex;
+    display: flex;
     flex-direction: column;
     gap: 24px;
     width: 1500px;
@@ -32,17 +29,15 @@
 
   .name,
   .email {
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     width: 100%;
     height: 48px;
-
-    background: #E5E5E5;
-
-    border: 1px solid #D0D9D4;
-    border-radius: 4px
+    background: #e5e5e5;
+    border: 1px solid #d0d9d4;
+    border-radius: 4px;
   }
 
   input::placeholder {
@@ -55,14 +50,13 @@
   }
 
   .message {
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     height: 114px;
-    background: #E5E5E5;
-
-    border: 1px solid #60C095;
+    background: #e5e5e5;
+    border: 1px solid #60c095;
     border-radius: 4px;
   }
 
@@ -91,7 +85,6 @@
     background: #008552;
     border-radius: 4px;
   }
-
 
   .email-contact {
     display: none;
