--- a/css/recent-works.css
+++ b/css/recent-works.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 480px) {
-  .rcnt-work-indicator>img {
+  .rcnt-work-indicator > img {
     display: none;
   }
 
@@ -7,9 +7,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 80px 0px;
+    padding: 80px 0;
     gap: 48px;
-
     width: auto;
     height: auto;
   }
@@ -17,16 +16,15 @@
   .recent-works-title {
     width: auto;
     height: auto;
-
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
     line-height: 52px;
-    color: #172B4D;
+    color: #172b4d;
   }
 
-  .card-img>img {
+  .card-img > img {
     width: 100%;
     height: 252px;
     border-radius: 8px 8px 0 0;
@@ -44,7 +42,7 @@
   .card {
     padding: 0;
     background-color: #fff;
-    border: 1px solid #D0D9D4;
+    border: 1px solid #d0d9d4;
     border-radius: 8px;
   }
 
@@ -55,8 +53,9 @@
     font-size: 24px;
     line-height: 32px;
     text-align: center;
-    color: #172B4D;
+    color: #172b4d;
   }
+
   .text {
     display: flex;
     flex-direction: column;
@@ -74,8 +73,8 @@
   }
 
   button {
-    color: #172B4D;
-    background-color: #EBF0EE;
+    color: #172b4d;
+    background-color: #ebf0ee;
     border: none;
     text-align: center;
     text-decoration: none;
@@ -83,7 +82,7 @@
     padding: 8px;
   }
 
-  .see-prj>button {
+  .see-prj > button {
     width: 122px;
     padding: 12px;
     background-color: #36b37f;
@@ -108,7 +107,6 @@
   .languages li {
     list-style: none;
   }
-
 }
 
 /* Mobile */
@@ -131,94 +129,93 @@
     text-align: center;
     height: 97px;
     width: 327px;
-  }
-
-  .recent-works-heading {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    height: 97px;
-    width: 327px;
-  }
-
-  .recent-works-title {
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
     line-height: 52px;
     color: #172b4d;
   }
+}
 
-  /* Cards */
-  .card {
-    display: flex;
-    flex-direction: column;
-    height: 474px;
-    width: 327px;
-    border-radius: 8px;
-    text-align: center;
-    border: 1px solid #d0d9d4;
-    margin-top: 50px;
-  }
+.recent-works-heading {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  height: 97px;
+  width: 327px;
+}
 
-  .card-img>img {
-    width: 100%;
-    height: 252px;
-    border-radius: 8px 8px 0 0;
-  }
 
-  .text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 10px;
-    align-items: center;
-    height: 100px;
-  }
+/* Cards */
+.card {
+  display: flex;
+  flex-direction: column;
+  height: 474px;
+  width: 327px;
+  border-radius: 8px;
+  text-align: center;
+  border: 1px solid #d0d9d4;
+  margin-top: 50px;
+}
 
-  .framework {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
+.card-img > img {
+  width: 100%;
+  height: 252px;
+  border-radius: 8px 8px 0 0;
+}
 
-  .languages {
-    display: flex;
-    gap: 10px;
-    margin-top: 5px;
-  }
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+  height: 100px;
+}
 
-  button {
-    background-color: #ebf0ee;
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    color: #3a4a42;
-    border-radius: 4px;
-    padding: 8px;
-  }
+.framework {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
-  .see-prj>button {
-    width: 122px;
-    padding: 12px;
-    background-color: #36b37f;
-    border-radius: 4px;
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    color: #fff;
-    line-height: 24px;
-    font-size: 17px;
-    font-weight: 500;
-  }
+.languages {
+  display: flex;
+  gap: 10px;
+  margin-top: 5px;
+}
 
-  button:hover {
-    background-color: #008552;
-    box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
-    border-radius: 4px;
-  }
+button {
+  background-color: #ebf0ee;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  color: #3a4a42;
+  border-radius: 4px;
+  padding: 8px;
+}
 
-  .languages li {
-    list-style: none;
-  }
+.see-prj > button {
+  width: 122px;
+  padding: 12px;
+  background-color: #36b37f;
+  border-radius: 4px;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  line-height: 24px;
+  font-size: 17px;
+  font-weight: 500;
+}
+
+button:hover {
+  background-color: #008552;
+  box-shadow: 0 8px 16px rgba(30, 72, 143, 0.24);
+  border-radius: 4px;
+}
+
+.languages li {
+  list-style: none;
+}
 }
