Fix linter errors

--- a/css/projects.css
+++ b/css/projects.css
@@ -165,6 +165,8 @@ body {
   letter-spacing: 0.03em;
   color: #fff;
   background: transparent;
+
+  /* color: #000; */
 }
 
 .pop-buttons a button:hover {
