Styled the error message and fixed linters

--- a/css/forms.css
+++ b/css/forms.css
@@ -112,9 +112,9 @@
 }
 
 .error {
-  color: #c92c2c;
-  font-size: 20px;
-  font-weight: 600;
+  color: #e72323;
+  font-size: 18px;
+  font-weight: 400;
   margin: 8px;
 }
 
